# datalog-policy-eng

./: Cargo.toml  README.md
docs/superpowers/plans/: 2026-03-14-policy-engine.md  2026-03-15-noodle-cli.md  2026-03-16-file-watcher.md  2026-03-16-policy-linting.md
docs/superpowers/specs/: 2026-03-14-policy-engine-design.md  2026-03-15-noodle-cli-design.md  2026-03-16-file-watcher-design.md  2026-03-16-policy-linting-design.md
src/: decision.rs  error.rs  facts.rs  lib.rs  types.rs
src/cli/: facts_json.rs  mod.rs  oneshot.rs  output.rs  repl.rs
src/dsl/: ast.rs  compiler.rs  grammar.pest  linter.rs  mod.rs  parser.rs
src/evaluator/: builtins.rs  engine.rs  facts_loader.rs  mod.rs
src/policy/: compiled.rs  file_watcher.rs  mod.rs  store.rs  watcher.rs
tests/: concurrency_tests.rs  dsl_tests.rs  fail_closed_tests.rs  scenario_tests.rs
tests/fixtures/: test.dl  test_facts.json  test_facts_deny.json
