[package]
name = "datalog-noodle"
version = "0.1.0"
edition = "2021"

[dependencies]
cozo       = { version = "0.7", default-features = false, features = ["minimal", "requests", "rayon"] }
pest       = "2"
pest_derive = "2"
regex      = "1"
parking_lot = "0.12"
thiserror  = "1"
serde_json = "1"
sha2       = "0.10"
clap       = { version = "4", features = ["derive"] }
rustyline  = "15"

[dev-dependencies]
# none yet — added as needed

[[bin]]
name = "noodle"
path = "src/bin/noodle.rs"
